Add get attributes by span id endpoint
